the minor version and Z the patch level.  For each new patch level, no
new features are added.  When the minor version is incremented, features
are added, which are documented in this file.  When the major version is
increased, backward-incompatible changes are made, which are documented
in the file MIGRATION. 

2016-01-24  Version 1.8:

* Variable dependencies can now be enclosed in parentheses, as in
  '($[A])'.  This was not allowed before. 

2015-11-22  Version 1.7:

* A new flag '&', marks trivial dependencies.  '&' is used as a prefix,
  like '!' and '?'.  Trivial dependencies will never cause a target to
  be rebuilt, but if the target is rebuilt anyway, then they act like
  normal dependencies. They are intended for configuration files
  containing e.g. flags and paths. 

2015-10-22  Version 1.6:

* Both the -f option and the %include directive now allow directories as
  parameters, and will read the file 'main.stu' within them.

2015-10-19  Version 1.5:

* The syntax now allows parenthesis (only for grouping, no other
  semantics).  The can contain any number of other dependencies.
  Example:

      (A [B] [(C)]) 

  is equivalent to

      A [B] [C]

* Brackets can contain multiple expressions, e.g. [A B C].  This is
  equivalent to [A] [B] [C].
* The attributes '?' and '!' can be used as prefix operators at any
  level inside and outside brackets, with differing semantics.  For
  instance, the three following line have different meaning:
    [?A]   # The dependency 'A' is optional
    ?[A]   # The dependencies read from 'A' are optional
	?[?A]  # Combination of the two
* Much code related to dynamic dependencies was rewritten, in particular
  related to options '?' and '!' as well as multiply dynamic
  dependencies.  As a result, many bugs related to these features were
  fixed. 

2015-06-10  Version 1.4

* Parentheses are supported and may contain multiple filenames.
  Brackets may contain multiple filenames.  Existence-only dependencies