@@ -1,5 +1,0 @@
-main.stu:3:6: variable dependency $[B] must not be declared as optional dependency
-main.stu:3:5: using '?'
-*** Explanation: The flags '!', '?' and '&' can be applied to variable
-dependencies by placing them inside the brackets as in '$[!X]'.
-Placing them outside the brackets as in '!$[X]' is an error.
